<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:padding="30dp"
    tools:context=".LoginFragment.RegisteredFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:text="@string/zhuce"
                android:textColor="#ffffff"
                android:textSize="50sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_bg"
            android:drawableLeft="@drawable/username"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_bg"
            android:drawableLeft="@drawable/emali"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/telphone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edit_bg"
            android:drawableLeft="@drawable/telphone"
            android:drawablePadding="10dp"
            android:hint="@string/telphone"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_bg"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/zhuce"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>